feature: Refactor status mappers to use StatusMiljoeIdentForholdUtility for message decoding and status resolution